# PaperRAG

./: .env.example  .gitignore  README.md  docker-compose.yml  start.cmd  start.ps1  论文RAG助手开发计划.md  论文RAG助手需求文档.md  项目阶段总结.md
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: chats.py  jobs.py  papers.py  summaries.py
backend/app/core/: config.py
backend/app/db/: models.py  session.py
backend/app/schemas/: chat.py  paper.py  summary.py
backend/app/services/: chunker.py  embedding.py  metadata_extractor.py  pdf_parser.py  pipeline.py  rag.py  retrieval.py  storage.py  summary.py
backend/tests/: test_chunker.py  test_rag.py  test_retrieval.py
docs/: api.md  eval_plan.md  rag_pipeline.md
eval/: questions.jsonl
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: chats.ts  client.ts  papers.ts  summaries.ts  types.ts
frontend/src/components/: AppShell.tsx  CitationList.tsx  PaperList.tsx  UploadPanel.tsx
frontend/src/pages/: ChatPage.tsx  ComparePage.tsx  PaperLibraryPage.tsx
frontend/src/styles/: globals.css
frontend/src/tests/: App.test.tsx
scripts/: dev.ps1  eval_rag.py  eval_retrieval.py
